# Axon

./: .gitignore  README.md  axon.yaml  axon_build.py  axon_build_output.py  fibonacci_processor.py  main.py  pyproject.toml  test_patch.py
src/axon/: __init__.py  math_test.py
src/axon/agent/: __init__.py  brain.py  builder.py  chat.py  planner.py  utils.py
src/axon/cli/: __init__.py  app.py
src/axon/cli/commands/: __init__.py  ask.py  brain.py  build.py  chat.py  plan.py
src/axon/config/: loader.py  settings.py
src/axon/llm/: __init__.py  base.py  providers.py  registry.py
src/axon/memory/: __init__.py  schema.py  store.py
src/axon/tools/: browser.py
src/axon/utils/: __init__.py  console.py
src/axon/watcher/: __init__.py  idle.py  monitor.py
