[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axon-ai"
version = "0.1.0"
description = "An open-source, model-agnostic CLI coding agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Kashif" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "litellm>=1.0.0",
    "sqlmodel>=0.0.14",
    "aiosqlite>=0.19.0",
    "filelock>=3.13.0",
    "cryptography>=42.0.0",
    "watchdog>=4.0.0",
    "apscheduler>=3.10.0",
    "tree-sitter>=0.20.0",
    "pathspec>=0.12.0",
    "tiktoken>=0.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "structlog>=24.1.0",
    "mcp>=0.1.0",
    "anyio>=4.0.0",
    "pluggy>=1.4.0"
]

[project.scripts]
axon = "axon.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/axon"]
